2016-08-14         Arnold D. Robbins     <arnold@skeeve.com>

	* re.c (make_regexp): Only call dfasyntax if actually using
	dfa. Gives a 14% speedup on this test: https://raw.githubusercontent.com/chadbrewbaker/awka/master/benchmark/regexp.awk.
	From blathering in comp.lang.awk.

2016-08-12         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

	Unrelated:

	* int_array.c: Minor text and formatting edits.

2016-08-09         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* awk.h: Add a comment explaining the NUMINT flag in more detail.
	* int_array.c (standard_integer_string): New function to test whether
	a string matches what would be produced by sprintf("%ld", <value>).
	(is_integer): Fix bug -- if NUMBER was set, then the function was
	accepting strnum values with nonstandard string representations. We
	now call standard_integer_string to check that the string looks OK.
	Also added ifdef'ed code to simplify the function by relying upon
	force_number to parse the string, but this is disabled due to possible
	negative performance impact.

2016-08-03         Arnold D. Robbins     <arnold@skeeve.com>

	Remove typed regexes until they can be done properly.

	* NEWS: Updated.
	* awk.h (enum nodevals): Remove Node_typedregex.
	(force_string, force_number): Remove check for Node_typedregex.
	* awkgram.y (TYPED_REGEXP): Remove token.
	(grammar): Remove productions related to typed regexps. 
	(yylex): Don't find a typed regex or return it.
	(valinfo): Remove code for Node_typedregex.
	* builtin.c (do_length, do_print, call_sub, call_match,
	call_split_func, do_typeof): Remove code for Node_typedregex.
	* debug.c (watchpoint_triggered, print_memory): Remove code
	for Node_typedregex.
	* eval.c (nodetypes, setup_frame): Remove code for Node_typedregex.
	* interpret.h (r_interpret): Remove code for Node_typedregex.
	* profile.c (pprint): Remove code for Node_typedregex.
	(pp_strong_regex): Removed.