@@ -1,3 +1,9 @@
+2016-08-15         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* int_array.c (is_integer): Fix merge of stable changes to remove
+	obsolete string formatting check that has been superseded by
+	the new standard_integer_string check.
+
 2016-08-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* re.c (make_regexp): Only call dfasyntax if actually using
